--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,40 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "api": [
+        "./api"
+      ],
+      "assets/*": [
+        "./assets/*"
+      ],
+      "components/*": [
+        "./components/*"
+      ],
+      "constants": [
+        "./constants"
+      ],
+      "enums": [
+        "./enums"
+      ],
+      "hooks": [
+        "./hooks"
+      ],
+      "pages/*": [
+        "./pages/*"
+      ],
+      "store/*": [
+        "./store/*"
+      ],
+      "types/*": [
+        "./types/*"
+      ],
+    },
   },
   "include": [
-    "src"
+    "src",
+    "css.d.ts",
   ]
 }
