--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,33 @@
-{
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "standard-with-typescript",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/jsx-runtime"
-    ],
-    "overrides": [],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": [
-            "./tsconfig.json"
-        ]
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "rules": {
-            "comma-dangle": [
-                "error",
-                "never"
-            ]
-        }
-    }
-}
+// {
+//     "env": {
+//         "browser": true,
+//         "es2021": true
+//     },
+//     "extends": [
+//         "plugin:react/recommended",
+//         "standard-with-typescript",
+//         "plugin:@typescript-eslint/recommended",
+//         "plugin:react/jsx-runtime"
+//     ],
+//     "overrides": [],
+//     "parser": "@typescript-eslint/parser",
+//     "parserOptions": {
+//         "ecmaVersion": "latest",
+//         "sourceType": "module",
+//         "project": [
+//             "./tsconfig.json"
+//         ]
+//     },
+//     "plugins": [
+//         "react"
+//     ],
+//     "rules": {
+//         "rules": {
+//             "comma-dangle": [
+//                 "error",
+//                 "never"
+//             ]
+//         }
+//     }
+// }
+{}
