--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@react-google-maps/api": "^2.13.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,8 +15,11 @@
     "@types/react-dom": "^18.0.6",
     "emailjs": "^4.0.1",
     "formik": "^2.2.9",
+    "leaflet": "^1.9.2",
+    "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
@@ -52,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
+    "@types/mapbox-gl": "^2.7.6",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
