--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,6 +26,8 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.4",
+    "react-responsive": "^9.0.0",
+    "react-responsive-masonry": "^2.1.6",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.4",
@@ -66,6 +72,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/express": "^4.17.14",
     "@types/leaflet": "^1.9.0",
+    "@types/react-responsive-masonry": "^2.1.0",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
