--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_PUBLIC_KEY = 'j-PjuD4i90vcyH5lb'
-REACT_APP_SERVICE_ID = 'service_qzhgrjt'
-REACT_APP_TEMPLATE_ID = 'template_b1iob0p'
-REACT_APP_TEMPLATE_SUBSCRIBE_ID = 'template_98jhgo7'
+REACT_APP_EMAIL_SERVICE_ID=service_38z1gxo
+REACT_APP_EMAIL_PUBLIC_KEY=xEtDLu2kV6gAFUeMQ
+REACT_APP_EMAIL_TEMPLATE_CONTACT=template_eojic7k-new
+REACT_APP_EMAIL_TEMPLATE_SUBSCRIBE=template_52rw7un
